--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ body {
   line-height: 48px;
   color: #fbfbfb;
   margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .explain{
@@ -145,137 +146,6 @@ body {
   margin-bottom: 20px;
 }
 
-
-/* 375px ve üzeri için */
-@media (min-width: 375px) {
-  .container {
-    width: 375px;
-  }
-
-
-  .header-container {
-    background-color:  rgba(87, 111, 53, 1);
-    ;
-    height: 80px;
-    padding: 0 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    z-index: 10;
-  }
-  
-  .menu-toggle {
-    display: none;
-  }
-  
-  .navbar {
-    display: flex;
-    gap: 50px;
-  }
-  
-  .navbar-ul {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%; /* Ekranın tamamını kaplayacak */
-    height: 100vh; /* Tüm ekran yüksekliği */
-    background-color: rgba(122, 49, 69, 1); /* Hafif şeffaf arka plan */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-    z-index: 100; /* Menünün header ve diğer elementlerin üzerinde olması için yüksek z-index */
-    visibility: hidden;
-    opacity: 0;
-  }
-  
-  .menu-toggle:checked ~ .navbar-ul {
-    visibility: visible;
-    opacity: 1; /* Menü görünecek */
-  }
-  
-  .navbar-ul a {
-    display: block;
-    text-align: center;
-    width: 100%;
-    padding: 10px;
-    color: #622133;
-    color: white;
-    text-decoration: none;
-  }
-  
-  .navbar-ul a:hover {
-    background-color: #7a3145;
-  }
-  
-  /* Kapatma İkonu Stili */
-  .navbar-ul .close-menu {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: block;
-    cursor: pointer;
-  }
-  
-  .navcontainer {
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    color: #fbfbfb;
-  }
-  
-  .but-how, .but-veg, .but-rev, .but-shop {
-    border: 1px solid #fbfbfb66;
-    width: 120px;
-    height: 44px;
-    border-radius: 12px;
-    background-color: transparent;
-    color: white;
-    margin: 5px 0;
-    cursor: pointer;
-  }
-  
-  .but-shop {
-    background-color: #fbfbfb;
-    color: #7A3145;
-    width: 157px;
-    padding: 16px;
-    font-size: 17px;
-    font-weight: 600;
-    border-radius: 30px;
-    margin-top: 200px;
-  }
-  
-  .but-shop:hover {
-    color: rgba(122, 49, 69, 0.7);
-  }
-
-  .first-div{
-    width: 100%;
-    gap: 20px;
-  }
-  
-  .title{
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 48px;
-    color: #fbfbfb;
-    margin-bottom: 20px;
-    width: 100%;
-  }
-  
-  .explain{
-    font-weight: 500;
-    font-size: 14px;
-    font-weight: 18px;
-    color: #fbfbfb;
-    margin-bottom: 20px;
-  }
-
-  
-}
 
 
 
@@ -1144,11 +1014,138 @@ body {
 }
 
 
+@media (min-width: 375px) {
+  .container {
+    width: 375px;
+  }
 
 
+  .header-container {
+    background-color:  rgba(87, 111, 53, 1);
+    ;
+    height: 80px;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    z-index: 10;
+  }
+  
+  .menu-toggle {
+    display: none;
+  }
+  
+  .navbar {
+    display: flex;
+    gap: 50px;
+  }
+  
+  .navbar-ul {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; /* Ekranın tamamını kaplayacak */
+    height: 100vh; /* Tüm ekran yüksekliği */
+    background-color: rgba(122, 49, 69, 1); /* Hafif şeffaf arka plan */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    z-index: 100; /* Menünün header ve diğer elementlerin üzerinde olması için yüksek z-index */
+    visibility: hidden;
+    opacity: 0;
+  }
+  
+  .menu-toggle:checked ~ .navbar-ul {
+    visibility: visible;
+    opacity: 1; /* Menü görünecek */
+  }
+  
+  .navbar-ul a {
+    display: block;
+    text-align: center;
+    width: 100%;
+    padding: 10px;
+    color: #622133;
+    color: white;
+    text-decoration: none;
+  }
+  
+  .navbar-ul a:hover {
+    background-color: #7a3145;
+  }
+  
+  /* Kapatma İkonu Stili */
+  .navbar-ul .close-menu {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: block;
+    cursor: pointer;
+  }
+  
+  .navcontainer {
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+    color: #fbfbfb;
+  }
+  
+  .but-how, .but-veg, .but-rev, .but-shop {
+    border: 1px solid #fbfbfb66;
+    width: 120px;
+    height: 44px;
+    border-radius: 12px;
+    background-color: transparent;
+    color: white;
+    margin: 5px 0;
+    cursor: pointer;
+  }
+  
+  .but-shop {
+    background-color: #fbfbfb;
+    color: #7A3145;
+    width: 157px;
+    padding: 16px;
+    font-size: 17px;
+    font-weight: 600;
+    border-radius: 30px;
+    margin-top: 200px;
+  }
+  
+  .but-shop:hover {
+    color: rgba(122, 49, 69, 0.7);
+  }
+
+  .first-div{
+    width: 100%;
+    gap: 20px;
+  }
+  
+  .title{
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 48px;
+    color: #fbfbfb;
+    margin-bottom: 20px;
+    width: 336px;
+    text-transform: uppercase;
+  }
+  
+  .explain{
+    font-weight: 500;
+    font-size: 14px;
+    font-weight: 18px;
+    color: #fbfbfb;
+    margin-bottom: 20px;
+  }
+
+  
+}
 
 
-/* Tablet (768px ve üzeri) */
 @media (min-width: 768px) {
   .container {
     width: 100%;
