--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* Genel ayarlar */
+
 *,
 *::before,
 *::after {
@@ -45,16 +45,15 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%; /* Ekranın tamamını kaplayacak */
-  height: 100vh; /* Tüm ekran yüksekliği */
+  width: 100%; 
+  height: 100vh; 
   background-color: rgba(122, 49, 69, 1);
-  ; /* Hafif şeffaf arka plan */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  z-index: 100; /* Menünün header ve diğer elementlerin üzerinde olması için yüksek z-index */
+  z-index: 100; 
   visibility: hidden;
   opacity: 0;
   list-style-type: none;
@@ -62,7 +61,7 @@ body {
 
 .menu-toggle:checked ~ .navbar-ul {
   visibility: visible;
-  opacity: 1; /* Menü görünecek */
+  opacity: 1; 
 }
 
 .navbar-ul a {
@@ -79,7 +78,7 @@ body {
   background-color: #7a3145;
 }
 
-/* Kapatma İkonu Stili */
+
 .navbar-ul .close-menu {
   position: absolute;
   top: 20px;
@@ -645,7 +644,7 @@ body {
 }
 
 
-/* CSS */
+
 .harvest-container {
   background-color: #722f37;
   padding: 40px;
@@ -1045,22 +1044,22 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%; /* Ekranın tamamını kaplayacak */
-    height: 100vh; /* Tüm ekran yüksekliği */
-    background-color: rgba(122, 49, 69, 1); /* Hafif şeffaf arka plan */
+    width: 100%; 
+    height: 100vh; 
+    background-color: rgba(122, 49, 69, 1); 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-    z-index: 100; /* Menünün header ve diğer elementlerin üzerinde olması için yüksek z-index */
+    z-index: 100; 
     visibility: hidden;
     opacity: 0;
   }
   
   .menu-toggle:checked ~ .navbar-ul {
     visibility: visible;
-    opacity: 1; /* Menü görünecek */
+    opacity: 1; 
   }
   
   .navbar-ul a {
@@ -1077,7 +1076,7 @@ body {
     background-color: #7a3145;
   }
   
-  /* Kapatma İkonu Stili */
+  
   .navbar-ul .close-menu {
     position: absolute;
     top: 20px;
@@ -1167,39 +1166,151 @@ body {
 
   .navbar {
     gap: 470px;
+    width: 100%;
     margin: 0 auto;
   }
 
-  .navbar-ul {
-    left: -300px;
-    width: 300px;
+  .menu-toggle {
+    display: none;
   }
+  
+  .navbar {
+    display: flex;
+    gap: 470px;
+  }
+  
+  .navbar-ul {
+    position: fixed;
+    top: 0;
+    left: 50% ;  
+    width: 50%; 
+    height: 100vh; 
+    background-color: #622133;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: right 0.3s ease-in-out; 
+    z-index: 100;
+    visibility: hidden;
+    opacity: 0;
+  }
+  
+  .menu-toggle:checked ~ .navbar-ul {
+    visibility: visible;
+    opacity: 1;
+    right: 0; 
+  }
+  
+  
+  .shadow-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 50%; 
+    height: 100vh;
+    background-color: rgba(20, 20, 20, 0.4);
+    z-index: 90;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+  
+  .menu-toggle:checked ~ .shadow-overlay {
+    visibility: visible;
+    opacity: 1; 
+  }
+  
+  .navbar-ul a {
+    display: block;
+    text-align: center;
+    width: 100%;
+    padding: 10px;
+    background-color: #622133;
+    color: white;
+    text-decoration: none;
+  }
+  
+  .navbar-ul a:hover {
+    background-color: #7a3145;
+  }
+  
+  
+  .navbar-ul .close-menu {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: block;
+    cursor: pointer;
+  }
+  
+  .navcontainer {
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+    color: #fbfbfb;
+  }
+  
+  .but-how, .but-veg, .but-rev, .but-shop {
+    border: 1px solid #fbfbfb66;
+    width: 120px;
+    height: 44px;
+    border-radius: 12px;
+    background-color: transparent;
+    color: white;
+    margin: 5px 0;
+    cursor: pointer;
+  }
+  
+  .but-shop {
+    background-color: #fbfbfb;
+    color: #7A3145;
+    width: 157px;
+    padding: 16px;
+    font-size: 17px;
+    font-weight: 600;
+    border-radius: 30px;
+    margin-top: 150px;
+  }
+  
+  .but-shop:hover {
+    color: rgba(122, 49, 69, 0.7);
+  }
+  
+
 
   .first-div{
-    width: 704px;
+    width: 100%;
+    gap: 20px;
     margin: 0 auto;
-    
   }
+  
   .title{
-    width: 704px;
-    
-  }
-
-
-  .first-section .title {
+    font-weight: 600;
     font-size: 76px;
     line-height: 76px;
+    color: #fbfbfb;
+    margin-bottom: 20px;
+    width: 704px;
+    text-transform: uppercase;
+    
   }
-
-  .title {
-    font-size: 48px;
-    margin-left: 25px;
-  }
-
-  .explain {
+  
+  .explain{
+    width: 603px;
+    height: 60px;
+    font-weight: 500;
     font-size: 16px;
-    margin-left: 25px;
+    line-height: 20px;
+    color: #fbfbfb;
+    margin-bottom: 20px;
   }
+  
+  .first-part-img1{
+    width: 100%;
+  }
+
+
   .organic-vegatables {
     padding: 100px 32px 100px 32px;
     gap: 50px;
@@ -1345,6 +1456,7 @@ body {
       padding: 20px;
       background-color: #7A3145;
       width: 100%;
+      flex-direction: row;
   }
   
   .footer-left {
@@ -1367,6 +1479,7 @@ body {
   }
   
   .footer-right {
+    width: 215px;
     display: flex;
     flex-direction: column;
       text-align: right;
@@ -1527,7 +1640,7 @@ body {
 
 }
 
-/* Masaüstü (1280px ve üzeri) */
+
 @media (min-width: 1280px) {
   .container {
     width: 1280px;
