--- a/css/styles.css
+++ b/css/styles.css
@@ -1594,7 +1594,9 @@ body {
     padding: 0 auto;
   }
 
+
   .header-container {
+    all: unset;
     background-color: #576f35;
     width: 1280px;
     height: 80px;
@@ -1605,6 +1607,7 @@ body {
   }
   
   .navbar-ul {
+    all: unset;
     display: flex;
     width: 489px;
     height: 52px;
@@ -1615,6 +1618,7 @@ body {
   }
   
   .navcontainer {
+    all: unset;
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
@@ -1626,6 +1630,7 @@ body {
   }
   
   .but-how {
+    all: unset;
     border: 1px solid #fbfbfb66;
     width: 114px;
     height: 44px;
@@ -1637,6 +1642,7 @@ body {
   }
   
   .but-veg {
+    all: unset;
     width: 101px;
     height: 44px;
     gap: 10px;
@@ -1647,6 +1653,7 @@ body {
   }
   
   .but-rev {
+    all: unset;
     width: 81px;
     height: 44px;
     margin-top: 5px;
@@ -1657,6 +1664,7 @@ body {
   }
   
   .logo-svg {
+    all: unset;
     width: 194px;
     height: 18px;
     margin-top: 20px;
@@ -1664,6 +1672,7 @@ body {
   }
   
   .but-shop {
+    all: unset;
     width: 157px;
     height: 52px;
     padding: 16px 32px 16px 32px;
@@ -1679,14 +1688,12 @@ body {
   }
   
   .but-shop:hover {
+    all: unset;
     background: #622133;
-  }
-
-  .but-bar{
-    visibility: hidden;
   }
   
   .first-div {
+    all: unset;
     display: flex;
     flex-direction: column;
     gap: 128px;
@@ -1697,8 +1704,25 @@ body {
     padding-top: 238px;
     background: none;
   }
+
+  .first-section{
+    all: unset;
+    width: 502px;
+    display: block;
+    margin-top: 40px;
+    padding-bottom: 50px;
+    margin-left: 20px;
+    gap: 128px;
+  }
+
+  .container-first{
+    all: unset;
+    width: 502px;
+  }
   
   .title {
+    display: block;
+    all: unset;
     font-weight: 600;
     font-size: 76px;
     line-height: 1;
@@ -1708,13 +1732,33 @@ body {
     text-transform: uppercase;
     margin: 0;
   }
+
+  .navbar{
+    gap: 397px;
+  }
+
+  .first-part-img1{
+    display: none;
+  }
+
+  .navbar-ul .close-menu{
+    all: unset;
+    display: none;
+  }
+  .svg-bar{
+    all: unset;
+    display: none;
+  }
   
   .explain {
+    all: unset;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
     color: #fbfbfb;
     width: 472px;
+    margin-top: 50px;
   }
   
   .background-wrapper {
@@ -1723,18 +1767,19 @@ body {
     background-color: #576f35;
     padding-top: 32px;
     position: relative;
+    height: 800px;
   }
+
+  
   
   .header-container,
   .first-div {
+    all: unset;
     background: none;
   }
   
 
-  .header-container,
-  .first-div {
-    background: none;
-  }
+  
 
   .organic-vegatables {
     padding: 100px;
