--- a/css/styles.css
+++ b/css/styles.css
@@ -1697,7 +1697,6 @@ body {
     width: 502px;
     text-transform: uppercase;
     margin: 0;
-
   }
 
   .navbar{
@@ -1746,6 +1745,16 @@ body {
   }
   
 
+  .discount-info-text{
+    width: 1080px;
+    font-size: 76px;
+    line-height: 80px;
+    gap: 25px;
+  }
+
+  .discount-info-green-box{
+    width: 850px;
+  }
   
 
   .organic-vegatables {
@@ -2457,4 +2466,42 @@ body {
   .social-link:hover {
     opacity: 0.8;
   }
+
+  .footer{
+    display: flex;
+    flex-direction: row;
+    gap: 200px;
+  }
+
+  .footer-right{
+    display: flex;
+    flex-direction: row;
+    gap: 121px;
+  }
+  .footer-right a{
+    font-size: 32px;
+    line-height: 32px;
+    gap: 25px;
+  }
+
+  .contact a{
+    margin-bottom: 25px;
+  }
+
+
+  .contact-info{
+   display: flex;
+   flex-direction: column;
+    font-size: 18px;
+    line-height: 20px;
+    width: 215px;
+  }
+  
+  .contact-info p{
+    width: 215px;
+    margin-bottom: 25px;
+  }
+
+  
 }
+
